WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43230
REGRESSION: Memory leak within JSParser::JSParser
https://bugs.webkit.org/show_bug.cgi?id=43230
Summary
REGRESSION: Memory leak within JSParser::JSParser
Mark Rowe (bdash)
Reported
2010-07-29 18:50:44 PDT
The build bot shows memory leaks from within JSParser::JSParser at <
http://build.webkit.org/results/SnowLeopard%20Intel%20Leaks/r64324%20(9455)/DumpRenderTree7-leaks.txt
>. I believe these showed up shortly after the new JavaScript parser was turned on. Oliver said he was going to look at them then but I don’t think a bug was ever filed.
Attachments
proposed fix
(5.79 KB, patch)
2010-09-01 17:13 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2010-07-29 18:51:14 PDT
<
rdar://problem/8254215
>
Geoffrey Garen
Comment 2
2010-08-03 11:16:41 PDT
Is this a bug in ThreadSpecific?
Alexey Proskuryakov
Comment 3
2010-09-01 15:16:02 PDT
I think that this is a misuse of ThreadSpecific. It can't possibly destroy data for all threads in its own destructor. template<typename T> inline ThreadSpecific<T>::~ThreadSpecific() { pthread_key_delete(m_key); // Does not invoke destructor functions. }
Alexey Proskuryakov
Comment 4
2010-09-01 17:13:23 PDT
Created
attachment 66301
[details]
proposed fix
WebKit Commit Bot
Comment 5
2010-09-02 05:58:24 PDT
Comment on
attachment 66301
[details]
proposed fix Clearing flags on attachment: 66301 Committed
r66665
: <
http://trac.webkit.org/changeset/66665
>
WebKit Commit Bot
Comment 6
2010-09-02 05:58:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug