2010-09-02  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=43230
        <rdar://problem/8254215> REGRESSION: Memory leak within JSParser::JSParser

        One can't delete a ThreadSpecific object that has data in it. It's not even possible to
        enumerate data objects in all threads, much less destroy them from a thread that's destroying
        the ThreadSpecific.

        * parser/JSParser.cpp:
        (JSC::JSParser::JSParser):
        * runtime/JSGlobalData.h:
        * wtf/WTFThreadData.cpp:
        (WTF::WTFThreadData::WTFThreadData):
        * wtf/WTFThreadData.h:
        (WTF::WTFThreadData::approximatedStackStart):
        Moved stack guard tracking from JSGlobalData to WTFThreadData.

        * wtf/ThreadSpecific.h: Made destructor unimplemented. It's dangerous, and we probably won't
        ever face a situation where we'd want to delete a ThreadSpecific object.

Canonical link: https://commits.webkit.org/57424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66665 268f45cc-cd09-0410-ab3c-d52691b4dbfc